kubernetes/copyparty/copyparty.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  labels:
    app: copyparty
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      volumes:
      - name: copyparty-config
        configMap:
          name: copyparty-config
      - name: data
        hostPath:
          path: /data
      containers:
      - name: copyparty
        # https://github.com/9001/copyparty/pkgs/container/copyparty-ac/versions
        image: ghcr.io/9001/copyparty-ac:1.20.13
        volumeMounts:
        - name: copyparty-config
          mountPath: /cfg
          readOnly: true
        - name: data
          mountPath: /w
        ports:
        - name: http
          containerPort: 3923
---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
spec:
  selector:
    app: copyparty
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "copyparty.home.cambridge.me"
    secretName: copyparty-home-cambridge-me-tls
  rules:
  - host: copyparty.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: copyparty
            port:
              name: http
